fix overflow mobile device

--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -27,10 +27,6 @@ body {
   overflow-x: hidden;
 }
 
-input,
-textarea,
-button,
-select,
-a {
-  -webkit-tap-highlight-color: transparent;
+a::selection {
+    background-color: transparent;
 } 
