--- a/scss/index.css
+++ b/scss/index.css
@@ -32,12 +32,12 @@ body {
   overflow-x: hidden;
 }
 
-input,
-textarea,
-button,
-select,
-a {
-  -webkit-tap-highlight-color: transparent;
+a::-moz-selection {
+  background-color: transparent;
+}
+
+a::selection {
+  background-color: transparent;
 }
 
 .typed-cursor {
